--- a/main.css
+++ b/main.css
@@ -21,8 +21,14 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+    vertical-align: baseline;
+    /* border: 2px solid red; */
 }
+
+a{
+    text-decoration: none;
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -46,4 +52,84 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+body{
+    background: rgb(22, 58, 19);
+}
+h1{
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 7em;
+    max-width: .8;
+	font-weight: bold;
+	text-align: center;
+    line-height: 100%;
+    color: whitesmoke;
+    text-decoration: none;
+}
+a{
+    color: white;
+}
+h2{
+	font-family: "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 3em;
+	font-weight: 100;
+	text-align: center;
+	color: white;
+}
+nav{
+    margin: 3em auto;
+    width: 30%;
+}
+nav li{
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 2em;
+    font-weight: 100;
+    color: white;
+}
+nav ul li a{
+    text-align: right;
+}
 
+nav div{
+    display: inline-block;
+}
+
+#chapter-titles{
+    text-align: right;
+    float: right;
+}
+main{
+    width: 80%;
+    margin: auto;
+    padding: 40px 0;
+    border-radius: 20px;
+    background-color: rgb(11, 29, 10);
+}
+article section h2{
+    margin: 40px auto;
+}
+p{
+    width: 58%;
+    margin: 20px auto;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 2em;
+    font-weight: 100;
+    color: white;
+}
+figure{
+    margin: 20px auto;
+}
+article section img{
+    display: block;
+    width: 30%;
+    border: 7px solid black;
+    margin: 40px auto 10px auto;
+}
+figcaption{
+    width: 30%;
+    margin: 0 auto;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 1.2em;
+    font-weight: 100;
+    color: white;
+}
