--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	/* font: inherit; */
     vertical-align: baseline;
     /* border: 2px solid red; */
 }
@@ -53,7 +53,8 @@ table {
 	border-spacing: 0;
 }
 body{
-    background: rgb(22, 58, 19);
+    background: linear-gradient(#82e0d7, #e0af82, #e08287);
+    /* background: rgb(152, 175, 146); */
 }
 h1{
     font-family: "Helvetica Neue", Helvetica, sans-serif;
@@ -67,6 +68,7 @@ h1{
 }
 a{
     color: white;
+    text-decoration: underline;
 }
 h2{
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
@@ -79,7 +81,7 @@ nav{
     margin: 3em auto;
     padding: 30px;
     width: 48%;
-    background-color: rgba(255, 255, 255, 0.171);
+    background: rgba(255, 255, 255, 0.171);
     border-radius: 50px;
 }
 nav li{
@@ -105,7 +107,10 @@ main{
     margin: auto;
     padding: 40px 0;
     border-radius: 20px;
-    background-color: rgb(11, 29, 10);
+    border: 10px solid black;
+    /* background: linear-gradient(rgb(11, 29, 10), rgba(11, 29, 10, 0)); */
+    background: #e09882;
+    /* background: linear-gradient( rgba(11, 29, 10, 0), #E8741F, #6D0712); */
 }
 article section h2{
     margin: 40px auto;
@@ -115,7 +120,6 @@ p{
     margin: 20px auto;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 1.9em;
-    font-weight: 100;
     color: white;
     line-height: 1.3em;
 }
