--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ table {
 	border-spacing: 0;
 }
 body{
-    background: linear-gradient(#82e0d7, #e0af82, #e08287);
+    background: linear-gradient(#aad1b4, #d1b6aa, #d1aab8);
     /* background: rgb(152, 175, 146); */
 }
 h1{
@@ -65,6 +65,9 @@ h1{
     line-height: 100%;
     color: whitesmoke;
     text-decoration: none;
+}
+.tagline{
+    font-weight: 50%;
 }
 a{
     color: white;
@@ -90,15 +93,16 @@ nav li{
     font-weight: 100;
     color: white;
 }
-nav ul li a{
-    text-align: right;
+nav ul a{
+    text-decoration: none;
 }
 
 nav div{
     display: inline-block;
 }
 
-#chapter-titles{
+.chapter-titles{
+    text-decoration: underline white;
     text-align: right;
     float: right;
 }
@@ -109,7 +113,7 @@ main{
     border-radius: 20px;
     border: 10px solid black;
     /* background: linear-gradient(rgb(11, 29, 10), rgba(11, 29, 10, 0)); */
-    background: #e09882;
+    background: #71b882;
     /* background: linear-gradient( rgba(11, 29, 10, 0), #E8741F, #6D0712); */
 }
 article section h2{
@@ -140,4 +144,9 @@ figcaption{
     font-size: 1.2em;
     font-weight: 100;
     color: white;
+}
+#link-to-top{
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 75%;
 }
